# python-particle-in-box-sumulation-fei-cf3121

./: .spec  README.md  __init__.spec  __main__.spec  projeto.spec  pyproject.toml  python_particle_in_box_sumulation_fei_cf3121.spec
python_particle_in_box_sumulation_fei_cf3121/: __main__.py  projeto.py
python_particle_in_box_sumulation_fei_cf3121/core/: first.py  second.py
python_particle_in_box_sumulation_fei_cf3121/ui/: first_option.py  first_option_result.py  second_option.py  second_option_result.py
